# 1_lab

./: CMakeLists.txt
12(proga)/: CMakeLists.txt  func.cpp  func.h
laba1.1(proga)/: CMakeLists.txt  fun.cpp  fun.h
laba1.4(proga)/: CMakeLists.txt  fun.cpp  fun.h
laba1.9(proga)/: CMakeLists.txt  fun.cpp  fun.h
